--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,44 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* ANIMATION */
+
+.animate-text {
+	animation: animateText 2s ease-in-out;
+	/* transform: translateY(-10px); */
+	display: inline-block;
+}
+.animate-text-main {
+	animation: animateTextMain 1s ease-in-out;
+}
+@keyframes animateText {
+	0% {
+		/* transform: translateY(0px); */
+		transform: translateY(-15px);
+		opacity: 0;
+	}
+	50% {
+		/* transform: translateY(0px); */
+		/* opacity: 0.5; */
+		/* color: #fff; */
+	}
+	100% {
+		/* transform: translateY(25px); */
+		opacity: 1;
+		transform: translateY(0px);
+	}
+}
+@keyframes animateTextMain {
+	0% {
+		/* transform: translateY(0px); */
+		transform: translateY(15px);
+		opacity: 0;
+	}
+
+	100% {
+		/* transform: translateY(25px); */
+		opacity: 1;
+		transform: translateY(0px);
+	}
+}
