--- a/src/components/SpeedoMeter/SpeedoMeter.css
+++ b/src/components/SpeedoMeter/SpeedoMeter.css
@@ -1,10 +1,12 @@
 .speedometer-container {
 	width: 366px;
-	height: 366px;
+	/* height: 366px; */
+
 	/* border: 1px solid black; */
 	border-radius: 50%;
 	/* margin: 50px auto; */
 	position: relative;
+	margin: 0 auto;
 }
 
 .speedometer-scale {
